--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -5,8 +5,8 @@ $green: #7eb252;
 $darkgreen: #a4c58c;
 $lightgreen: #f6f9f3;
 $brown: #9a9a9a;
-$tablet-width: 768px;
-$desktop-width: 1920px;
+$tablet-min-width: 321px;
+$desktop-width: 1200px;
 /*$mobile-width-only: 767px;*/
 
 
