secton symptoms css

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -7,6 +7,6 @@ $lightgreen: #f6f9f3;
 $brown: #9a9a9a;
 $tablet-min-width: 321px;
 $desktop-width: 1200px;
-/*$mobile-width-only: 767px;*/
+$mobile-width-only: 600px;
 
 
