separate scss section

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,8 @@
 @import "scaffolding";
+@import "header";
+@import "about";
+@import "facts";
+@import "symptoms";
 
 body {
   border: .1px solid transparent;
@@ -11,816 +15,3 @@ body {
   border: none;
   font-weight: 500;
 }
-
-/*page-header*/
-
-.header {
-  padding: 20px 11px;
-  margin: 0;
-}
-
-.page-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  &__delivery {
-    display: none;
-  }
-
-  &__about-phone {
-    display: none;
-  }
-
-  &__phone {
-    margin: 0;
-    padding: 0;
-
-    list-style-type: none;
-  }
-
-  &__number {
-    font-size: 14px;
-    font-weight: 500;
-  }
-
-  &__logo {
-    width: 111px;
-    height: 16px;
-  }
-}
-
-/*SECTION HEADER EXTRA MEDIA QUERIES*/
-
-@media (min-width: $tablet-min-width) {
-  .page-header__logo {
-    width: 198px;
-    height: 29px;
-  }
-}
-
-@media (max-width: 380px) {
-  .page-header__logo {
-    width: 111px;
-    height: 16px;
-  }
-}
-
-/*SECTION HEADER EXTRA MEDIA QUERIES END*/
-
-/*Tablet width*/
-
-/*@media (min-width: $tablet-min-width) {*/
-@media (min-width: 655px) {
-
-  .page-header {
-    align-items: normal;
-
-    &__delivery {
-      display: block;
-      color: #9a9a9a;
-      font-size: 14px;
-      margin-right: auto;
-    }
-
-    &__about-phone {
-      display: block;
-      color: #9a9a9a;
-      font-size: 12px;
-      margin-left: auto;
-    }
-
-    &__number {
-      font-size: 20px;
-
-      &::before {
-        content: url("../../build/img/phone-icon.svg");
-        width: 15px;
-        height: 15px;
-        margin-right: 10px;
-      }
-    }
-
-    &__logo {
-      width: 225px;
-    }
-
-    &__logo-image {
-      width: 198px;
-      height: 29px;
-
-      padding-top: 9px;
-    }
-
-    &__phone {
-      display: flex;
-      flex-direction: column;
-    }
-  }
-
-  .header {
-    padding: 26px 22px;
-  }
-}
-
-/*Desktop width*/
-
-@media (min-width: $desktop-width) {
-  .page-header {
-
-    max-width: 1200px;
-    margin: 0 auto;
-
-    &__delivery {
-      font-size: 16px;
-    }
-  }
-}
-
-/*page-header end*/
-
-/*about*/
-.about {
-  border: .1px solid transparent;
-  margin: 0;
-  padding: 0;
-  background-color: #000;
-  background-image: url("../../build/img/bg-header-mobile.jpg");
-  color: #fff;
-
-  &__what-is {
-    font-size: 12px;
-    text-transform: uppercase;
-    font-weight: 800;
-  }
-
-  &__name {
-    font-size: 30px;
-    line-height: 36px;
-    font-weight: 500;
-  }
-
-  &-more__form {
-    display: none;
-  }
-
-  &__info-wrapper {
-    margin-bottom: 100px;
-  }
-
-  &__packing-wrapper {
-
-  }
-
-  &__packing {
-    display: block;
-    background-image: url(../../build/img/packing-mobile.png);
-    width: 86px;
-    height: 188px;
-    margin: 0 auto;
-  }
-
-  .about-more__btn-mobile {
-    width: 100%;
-    padding: 25px 0;
-  }
-}
-
-/*Tablet width*/
-
-@media (min-width: $tablet-min-width) {
-  .about {
-    background: url("../../build/img/bg-header-desktop.jpg") no-repeat;
-    max-width: 1720px;
-    margin: 0 auto;
-
-    &__packing-wrapper {
-      width: 50%;
-      float: left;
-      margin-top: 95px;
-    }
-
-    &__info-wrapper {
-      width: 50%;
-      float: right;
-      margin-top: 95px;
-    }
-
-    &__what-is {
-      font-size: 14px;
-      padding-top: 25px;
-      padding-left: 5px;
-      margin: 0;
-    }
-
-    &__name {
-      font-size: 50px;
-      line-height: 60px;
-      margin: 0;
-      padding-top: 30px;
-      padding-bottom: 15px;
-    }
-
-    &__intro {
-      margin: 0;
-      padding: 0;
-      padding-left: 5px;
-    }
-
-    &__packing {
-      background: url("../../build/img/packing-tablet-desktop.png");
-      width: 298px;
-      height: 648px;
-      margin: 0 auto;
-    }
-
-    &__info {
-      width: 230px;
-    }
-  }
-
-  .wrapper-content {
-    position: relative;
-
-    margin: 0 auto;
-    margin-left: 12px;
-    margin-right: 12px;
-  }
-
-  .about-more {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    background-color: #fff;
-
-    &__form {
-      display: block;
-      border: 1px solid #c8dcba;
-      /*top right bottom left*/
-      margin: 20px 20px 10px 20px;
-      padding: 45px 45px 0 45px;
-      background-color: #fff;
-    }
-
-    &__info {
-      text-transform: uppercase;
-      color: #000;
-      font-size: 14px;
-      font-weight: 800;
-    }
-
-    &__item {
-      display: inline-block;
-    }
-
-    &__item-first {
-      margin-right: 30px;
-    }
-
-    label {
-      color: #c8dcba;
-    }
-
-    &__button {
-      display: block;
-      /*top right bottom left*/
-      padding: 15px 60px 15px 75px;
-      float: right;
-      margin-right: -46px;
-      margin-top: 60px;
-    }
-
-    &__btn-mobile {
-      display: none;
-    }
-
-    input[type="text"], input[type="tel"] {
-      border: none;
-      border-bottom: 1px solid #c8dcba;
-    }
-
-    /*изменение цвета placeholder*/
-    #about-more__phone::-webkit-input-placeholder,
-    #about-more__name::-webkit-input-placeholder {
-      color: $darkgreen;
-    }
-
-    #about-more__phone::-moz-placeholder,
-    #about-more__name::-moz-placeholder {
-      color: $darkgreen;
-    }
-
-    /* Firefox 19+ */
-    #about-more__phone:-moz-placeholder,
-    #about-more__name:-moz-placeholder {
-      color: $darkgreen;
-    }
-
-    /*изменение цвета placeholder end*/
-  }
-}
-
-/*SECTION ABOUT EXTRA MEDIA QUERIES*/
-.about__info-wrapper {
-  @media (max-width: 600px) {
-    margin-top: 30px;
-    margin-bottom: 400px;
-    width: 100%;
-    text-align: center;
-  }
-}
-
-.about__info {
-  @media (max-width: 600px) {
-    width: 100%;
-  }
-}
-
-
-.about__packing-wrapper {
-  @media (max-width: 600px) {
-    display: none;
-  }
-
-  @media (max-width: $tablet-min-width - 1) {
-    display: block;
-    position: absolute;
-    width: 100%;
-    top: 220px;
-  }
-}
-
-
-.about__intro {
-  @media (max-width: $tablet-min-width - 1) {
-    display: none;
-  }
-}
-
-.about__name {
-  @media (max-width: $tablet-min-width - 1) {
-    width: 150px;
-    margin: 0 auto;
-  }
-}
-
-
-.about-more__form {
-  @media (max-width: 373px) {
-    margin: 0;
-    padding: 10px;
-  }
-}
-
-.about-more__button {
-  @media (max-width: 373px) {
-    float: none;
-    margin-top: 30px;
-  }
-}
-
-.about__info-wrapper {
-  @media (max-width: 373px) {
-    margin-top: 30px;
-    margin-bottom: 310px;
-    width: 100%;
-    text-align: center;
-  }
-  @media (max-width: $tablet-min-width - 1) {
-    margin-bottom: 235px;
-  }
-}
-
-/*SECTION ABOUT EXTRA MEDIA QUERIES END*/
-
-@media (min-width: $desktop-width) {
-  .wrapper-content {
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-
-  .about-more {
-    min-width: 50%;
-  }
-}
-
-/*about end*/
-
-
-/*facts*/
-
-.facts {
-  &__item {
-    margin: 0;
-    padding: 0;
-    margin-bottom: 45px;
-  }
-
-  &__item:last-child {
-    margin-bottom: 0;
-  }
-
-  &__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    margin-top: 60px;
-    margin-bottom: 55px;
-
-    /*background-color: rgba(23, 23, 23, 0.5);*/
-  }
-
-  &__less, &__description {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-
-  &__less {
-    /*для бордера по ширине контента*/
-    display: inline-block;
-    font-size: 24px;
-    color: $darkgreen;
-    border-bottom: 3px solid $darkgreen;
-    padding-bottom: 10px;
-  }
-
-  &__description {
-    max-width: 200px;
-    font-size: 16px;
-    margin-top: 25px;
-  }
-}
-
-/*Tablet width*/
-
-@media (min-width: $mobile-width-only) {
-  .facts {
-
-    &__wrapper {
-      width: 75%;
-      margin: 0 auto;
-
-      margin-top: 130px;
-      margin-bottom: 140px;
-
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      align-items: stretch;
-
-    }
-
-    &__item {
-      width: 50%;
-      padding: 0;
-      margin: 0;
-      padding-left: 40px;
-      padding-bottom: 110px;
-
-      box-sizing: border-box;
-    }
-
-    &__item:nth-child(3) {
-      padding-bottom: 0;
-    }
-
-    &__item:nth-child(4) {
-      padding-bottom: 0;
-    }
-
-    &__item:nth-child(2n) {
-      padding-left: 80px;
-    }
-
-    &__less,
-    &__description {
-      padding: 0;
-      margin: 0;
-    }
-
-    &__less {
-      position: relative;
-    }
-
-    &__less::before {
-      position: absolute;
-      display: block;
-      content: "";
-      height: 15px;
-      width: 15px;
-      border: 6px solid #e4eddc;
-      border-radius: 50%;
-
-      top: -35px;
-      left: -35px;
-    }
-
-    &__description {
-      max-width: none;
-    }
-  }
-
-}
-
-/*SECTION FACTS EXTRA MEDIA QUERIES*/
-
-.facts__wrapper {
-
-}
-
-/*SECTION FACTS EXTRA MEDIA QUERIES END*/
-
-/*Desktop width*/
-
-@media (min-width: $desktop-width) {
-  .facts {
-    max-width: 1200px;
-    margin: 0 auto;
-
-    &__wrapper {
-      width: 100%;
-      flex-wrap: nowrap;
-    }
-
-    &__item {
-      width: 25%;
-      margin: 0;
-      padding: 0;
-    }
-
-    &__less, &__description {
-      margin: 0;
-      padding: 0;
-    }
-
-    &__item:nth-child(2n) {
-      padding: 0;
-      margin: 0;
-    }
-
-    &__item:nth-child(odd) {
-      margin-left: 85px;
-    }
-
-    &__item:nth-child(2) {
-      margin-left: 100px;
-    }
-
-    &__item:nth-child(4) {
-      margin-left: 65px;
-    }
-
-    &__less::before {
-      position: absolute;
-      display: block;
-      content: "";
-      height: 15px;
-      width: 15px;
-      border: 6px solid #e4eddc;
-      border-radius: 50%;
-    }
-  }
-}
-
-/*facts end*/
-
-/*symptoms*/
-
-.symptoms {
-  &__question {
-    font-size: 24px;
-    line-height: 40px;
-    font-weight: 800;
-    margin: 0 auto;
-    text-align: center;
-    background-color: #fff;
-    padding-bottom: 25px;
-
-  }
-
-  &__list {
-    margin: 0;
-    padding: 0;
-    padding-left: 10px;
-    background-color: #f6f9f3;
-  }
-
-  &__item {
-    font-size: 12px;
-    text-transform: uppercase;
-
-    margin: 0;
-    padding-top: 30px;
-    padding-bottom: 30px;
-
-    border-bottom: 1px solid #e6efde;
-  }
-
-  &__list-top li {
-    font-weight: 500;
-  }
-
-  /*Стилизация нумерации*/
-  li {
-    list-style: none;
-  }
-
-  .num {
-    color: $darkgreen;
-    display: inline-block;
-    margin-right: 10px;
-  }
-
-  /*Стилизация нумерации end*/
-
-
-  /*Параграф с рамкой*/
-  fieldset,
-  legend,
-  .symptoms__wrapper-testimonials {
-    transform: rotate(180deg);
-  }
-
-  fieldset {
-    margin-right: 10px;
-    margin-left: 10px;
-    margin-bottom: 25px;
-    border: 1px solid #c5dab5;
-    background-color: $lightgreen;
-
-    p {
-      text-align: left;
-      margin: 0;
-      padding: 35px;
-    }
-
-    legend {
-      padding: 0 10px;
-
-      a {
-        text-decoration: none;
-        color: $darkgreen;
-        border-bottom: 1px solid $darkgreen;
-        font-weight: bold;
-      }
-    }
-  }
-
-  /*Параграф с рамкой end*/
-
-  &__btn {
-    display: block;
-    width: 100%;
-    text-align: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    text-decoration: none;
-  }
-
-  &__human {
-
-  }
-
-}
-
-@media (min-width: 768px) {
-  .symptoms {
-
-    .symptoms__question{
-      font-size: 30px;
-    }
-
-    .for_bgc {
-      background-color: $lightgreen;
-    }
-
-    .wrapper-content {
-      width: 85%;
-      margin: 0 auto;
-    }
-
-    &__item {
-      font-size: 14px;
-
-    }
-
-    &__list-bottom {
-      display: flex;
-      flex-wrap: wrap;
-
-      .symptoms__item {
-        width: 50%;
-        border-right: 1px solid #e6efde;
-        box-sizing: border-box;
-      }
-
-      .symptoms__item:nth-child(even) {
-        border-right: none;
-        padding-left: 35px;
-      }
-    }
-
-    &__testimonials {
-      width: 50%;
-      margin: 0 auto;
-      background-color: #f6f9f3;
-      border: .1px solid transparent;
-    }
-
-    &__human {
-      background-color: $darkgreen;
-      width: 100%;
-    }
-
-    fieldset {
-      margin: 20px;
-      margin-bottom: 10px;
-      padding: 0;
-    }
-
-    &__btn {
-      width: 50%;
-      margin: 0 auto;
-      margin-top: 40px;
-      cursor: pointer;
-
-      img {
-        margin-left: 15px;
-      }
-    }
-
-    .wrapper-testimonials {
-      background-color: #f6f9f3;
-      margin-bottom: -20px;
-      padding-bottom: 1px;
-    }
-
-  }
-
-  .symptoms__human-img {
-    width: 338px;
-    height: 508px;
-    margin: 0 auto;
-    background-image: url(../../build/img/green-human.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-  }
-
-}
-
-@media (min-width: $desktop-width) {
-  .symptoms {
-
-    .symptoms__question{
-      max-width: 1200px;
-      margin: 0 auto;
-      text-align: left;
-      font-size: 40px;
-      font-weight: 600;
-      padding-bottom: 50px;
-    }
-
-    .for_desktop_wrapper {
-      max-width: 1720px;
-      max-height: 100%;
-      margin: 0 auto;
-      background-color: $lightgreen;
-    }
-
-    .for_desktop_wrapper_content {
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-
-    .wrapper-content{
-      width: 58.5%;
-      float: left;
-    }
-
-    .symptoms__human{
-      width: 41.5%;
-      float: right;
-      margin-top: -80px;
-    }
-
-    .symptoms__testimonials{
-      width: 80%;
-      margin: 0;
-    }
-
-    .symptoms__btn{
-      width: 41.6%;
-      float: right;
-
-      margin-top: 20px;
-    }
-
-    .wrapper-testimonials{
-      margin-bottom: 0;
-    }
-  }
-}
-/*symptoms end*/
