--- a/src/sass/symptoms.scss
+++ b/src/sass/symptoms.scss
@@ -91,6 +91,7 @@
     padding-top: 30px;
     padding-bottom: 30px;
     text-decoration: none;
+    font-size: 12px;
 
     img{
       display: none;
